# marsim

./: Dockerfile  README.md  access_dock.sh  bluerov2_ekf_config.yaml  bluerov2_ros_gz_bridge.yaml  load_dock.sh
env-hooks/: marsim_gazebo.sh.in
launch/: empty_world.launch.py  spawn_bluerov2.launch.py  start_bridge_sst.launch.py
matlab_tools/bluerov2_tools/: A_B_diagnostic.m  create_A_B.m  reduced_order_lqr.m
matlab_tools/sst_tools/: HydrodynamicCoefficientEstimation.mlx
src/marsim_control/: CMakeLists.txt  package.xml
src/marsim_control/marsim_control/: bluerov2_utils.py  marsim_utils.py
src/marsim_control/scripts/: bluerov2_pid_pose_z_control.py
src/marsim_gazebo/: CMakeLists.txt  package.xml
src/marsim_gazebo/config/: bluerov2_ekf_config.yaml  bluerov2_ros_gz_bridge.yaml  sst_ros_gz_bridge.yaml
src/marsim_gazebo/launch/: spawn_bluerov2.launch.py  spawn_sst.launch.py  start_bridge.launch.py  start_bridge_bluerov2.launch.py
src/marsim_gazebo/models/bluerov2/: model.config  model.sdf
src/marsim_gazebo/models/sand_heightmap/: model.sdf
src/marsim_gazebo/models/sst/: model.config  model.sdf
src/marsim_gazebo/models/vessel_g/: model.config  model.sdf
src/marsim_gazebo/plugins/: DVLRosConverter.cc  DVLRosConverter.hh  GaussMarkovOceanCurrent.cc  GaussMarkovOceanCurrent.hh
src/marsim_gazebo/rviz/: bluerov2.rviz
src/marsim_gazebo/scripts/: depth_sensor_from_odom.py  noisy_odometry.py  ros_keyboard_controller.py  twist_stamper.py
src/marsim_gazebo/worlds/: empty.world
