<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>marsim_control</name>
    <version>0.0.0</version>
    <description>Marine Simulator Control Package</description>
    <maintainer email="yihan.xing@uis.no">Yihan Xing</maintainer>
    <license>Apache 2.0</license>
    <url type="website">TBA</url>
    <url type="repository">TBA</url>
    <url type="bugtracker">TBA</url>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>gz-cmake3</buildtool_depend>

    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>numpy</depend>
    <depend>scipy</depend>
    <depend>sklearn</depend>

    <exec_depend>python3-sklearn</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>